fixed spacing related issues in template + protobuf update

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+html,body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100vh;
+}
 body {
 	background-color: #dcdad5; /* grey */
-}
-body, div {
 	font-family: arial;
 }
 .page {
@@ -33,13 +37,20 @@ body, div {
 }
 .channelbox, .chatarea, .usersbox, .chatbox, #chatinput {
 	display: table-cell;
+	overflow: hidden;
+	vertical-align: top;
 }
 
 #chatlog .table-row .table-cell {
 	padding: 0.4em 0.3em;
 	vertical-align: top;
+	font-size: 10pt;
 }
 
+#chatlog {
+	margin: 0;
+	padding: 0;
+}
 #chatlog .table-row {
 	background-color: #ddd;
 }
@@ -48,6 +59,10 @@ body, div {
 }
 #chatlog .table-row .table-cell:last-child {
 	width:100%;
+}
+
+#connectionslist {
+	margin: 1em;
 }
 
 .channelbox {
@@ -59,8 +74,8 @@ body, div {
 .usersbox {
 	width:10em;
 	height:100vh;
-	box-sizing: border-box;
 	border:1px solid;
+	box-sizing: border-box;
 }
 .chatarea {
 	height:100vh;
@@ -74,6 +89,7 @@ body, div {
 #chatinput {
 	width: 100%;
 	height:20pt;
+	font-size:10pt;
 	border:1px solid;
 	padding: 0 0.3em;
 	box-sizing: border-box;
